# image-token-compression

./: .gitignore  LICENSE  README.md  pyproject.toml
bench/: BENCH_TODO.md  COMBINED_CLAUDE_REPORT.md  COMBINED_REPORT.md  COST_CLAUDE_BREAKDOWN.md  FINAL_REPORT.md  FULL_REPORT.md  HOTPOT_FULL_COMPARISON.md  LONGDOC_CLAUDE_REPORT.md  OPENCODE_COST_BREAKDOWN.md  _opencode_run.py  _profiles.py  _report_data.py  _usage_claude_breakdown.py  ab.py  backfill_images.py  campaign_report.py  combined_claude_report.py  combined_report.py  cost_breakdown.py  cost_claude_breakdown.py  generate_final_report.py  generate_full_report.py  hotpot_claude_experiment.py  hotpot_claude_report.py  hotpot_codex_experiment.py  hotpot_experiment.py  hotpot_full_analysis.py  hotpot_opencode_experiment.py  image_backfill.json  longdoc_claude_experiment.py  longdoc_claude_report.py  longdoc_codex_experiment.py  longdoc_experiment.py  longdoc_opencode_experiment.py  longdoc_report.py  make_final_charts.py  make_opencode_report.py  make_readme_charts.py  opencode_cost_breakdown.py  run_campaign.sh  (+6 more)
bench/hotpot_claude_runs/: REPORT.md  (+3 more)
docs/: input-tokens-vs-cost.md  make_anthropic_chart.py  make_charts.py  understanding-tokens-cache-cost.md
examples/: opencode.json
imgctx/: __init__.py  __main__.py  _oauth.py  anthropic.py  anthropic_history.py  codex.py  config.py  factsheet.py  gate.py  history.py  keepsharp.py  models.py  opencode.py  proxy.py  render.py  schema_strip.py  tools.py  transform.py
tests/: test_anthropic.py  test_anthropic_history.py  test_proxy.py  test_relay.py  test_units.py
(+67 files in other folders)
