[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgctx"
version = "0.1.0"
description = "Transparent image-context compression proxy for agentic coding CLIs, render bulky text context to images to cut input tokens."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "imgctx contributors" }]
keywords = ["llm", "proxy", "vision", "token-compression", "opencode", "agentic"]
dependencies = [
    "starlette>=0.37",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "reportlab>=4.0",
    "pdf2image>=1.17",
    "pillow>=10.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
bench = ["matplotlib>=3.8"]

[project.scripts]
imgctx = "imgctx.__main__:main"

[project.urls]
Homepage = "https://github.com/your-username/image-token-compression"

[tool.setuptools]
packages = ["imgctx"]

[tool.setuptools.package-data]
imgctx = ["assets/*.ttf"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
